feat(backend): :sparkles: Add base impl for api, health check endpoint and example websocket, with dockerfile

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,5 +2,15 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
-REDIS_HOST=redis
-REDIS_PORT=6379
+LOCAL_REDIS_HOST=localhost
+LOCAL_REDIS_PORT=6379
+
+DOCKER_REDIS_HOST=redis
+DOCKER_REDIS_PORT=6379
+
+LOCAL_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
+DOCKER_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
+
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8080
+
