--- a/backend/api/Cargo.toml
+++ b/backend/api/Cargo.toml
@@ -19,3 +19,7 @@ thiserror = "2.0"
 anyhow = "1.0"
 redis = { version = "0.29.5", features = ["tokio-comp"] }
 futures = "0.3"
+ctrlc = { version = "3.4", features = ["termination"] }
+rand = { version = "0.9.0", features = ["std_rng"] }
+rand_core = "0.9.3"
+rand-distributions = "0.1.2"
