--- a/backend/api/Cargo.toml
+++ b/backend/api/Cargo.toml
@@ -23,3 +23,6 @@ ctrlc = { version = "3.4", features = ["termination"] }
 rand = { version = "0.9.0", features = ["std_rng"] }
 rand_core = "0.9.3"
 rand-distributions = "0.1.2"
+utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "decimal_float"] }
+utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
+chrono = { version = "0.4.40", features = ["serde"] }
