--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 FROM chef AS planner
 COPY api/Cargo.toml /app/api/Cargo.toml
 COPY entity/Cargo.toml /app/entity/Cargo.toml
+COPY migration/Cargo.toml /app/migration/Cargo.toml
 
 # Create fake lib.rs file
 RUN mkdir -p /app/api/src/
@@ -17,7 +18,7 @@ COPY --from=planner /app/api/recipe.json /app/api/recipe.json
 
 COPY api /app/api
 COPY entity /app/entity
-
+COPY migration /app/migration
 WORKDIR /app/api
 
 # Build dependencies - this is the caching Docker layer!
