--- a/backend/api/Cargo.toml
+++ b/backend/api/Cargo.toml
@@ -27,3 +27,5 @@ rand-distributions = "0.1.2"
 utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "decimal_float"] }
 utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
 chrono = { version = "0.4.40", features = ["serde"] }
+auth = { path = "../auth" }
+async-trait = "0.1.88"
