--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "@tailwindcss/vite": "^4.1.3",
     "dotenv": "^16.5.0",
     "mapbox-gl": "^3.11.0",
+    "postprocessing": "^6.37.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
