ci(docker): :sparkles: Implement docker for frontend and setup entire project docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,23 @@
+# Database Settings
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 
+# Redis Settings
 LOCAL_REDIS_HOST=localhost
 LOCAL_REDIS_PORT=6379
 
+# Docker Redis Settings
 DOCKER_REDIS_HOST=redis
 DOCKER_REDIS_PORT=6379
 
+# Database Settings
 LOCAL_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 DOCKER_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
 
+# Server Settings
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
 
+# Frontend Settings
+VITE_MAPBOX_API_KEY=YOUR_MAPBOX_API_KEY
