feat: :sparkles: bunch of backend changes

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,19 @@
-# Database Settings
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+# Database configuration
+POSTGRES_USER=world_racers
+POSTGRES_PASSWORD=password
+POSTGRES_DB=world_racers
+DOCKER_DATABASE_URL=postgres://world_racers:password@postgres:5432/world_racers
 
-# Database Settings
-LOCAL_DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
-DOCKER_DATABASE_URL=postgresql://postgres:postgres@postgres:5432/postgres
-
-# Server Settings
+# API server configuration
 SERVER_HOST=0.0.0.0
-SERVER_PORT=8080
+SERVER_PORT=3000
 
-# Frontend Settings
-VITE_MAPBOX_API_KEY=YOUR_MAPBOX_API_KEY
+# Frontend configuration
+VITE_MAPBOX_API_KEY=your_mapbox_api_key
+
+# Domain configuration
+DOMAIN=localhost # For production, use your actual domain
+
+# Let's Encrypt (only for production)
+ACME_EMAIL=your-email@example.com
+
