--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,26 +1,69 @@
 services:
+  traefik:
+    image: traefik:v3
+    command:
+      - "--api.insecure=false"
+      - "--api.dashboard=true"
+      - "--log.level=DEBUG"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    networks:
+      - web
+    healthcheck:
+      test: ["CMD", "traefik", "healthcheck", "--ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
   postgres:
     extends:
       file: ./backend/docker-compose.yaml
       service: postgres
-  
+    networks:
+      - web
+
   backend:
     extends:
       file: ./backend/docker-compose.yaml
       service: backend
-  
-  # Add frontend service
+    environment:
+      - DATABASE_URL=${DOCKER_DATABASE_URL}
+      - SERVER_HOST=${SERVER_HOST}
+      - SERVER_PORT=${SERVER_PORT}
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=web"
+      - "traefik.http.routers.backend.rule=PathPrefix(`/api`) || PathPrefix(`/swagger-ui/`) || PathPrefix(`/api-docs/`)"
+      - "traefik.http.routers.backend.entrypoints=web"
+      - "traefik.http.services.backend.loadbalancer.server.port=${SERVER_PORT}"
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    ports:
-      - "80:80"
-    environment:
-      - VITE_MAPBOX_API_KEY=${VITE_MAPBOX_API_KEY}
-      - VITE_API_URL=http://backend:${SERVER_PORT}
-    depends_on:
-      - backend
+      args:
+        - VITE_MAPBOX_API_KEY=${VITE_MAPBOX_API_KEY}
+        - VITE_API_URL=http://${DOMAIN}/api
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
 
 volumes:
-  postgres_data: 
+  postgres_data:
+
+networks:
+  web:
+    driver: bridge
