feat(github_actions): :construction_worker: Use prod docker compose

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
             echo "Deploying version: $VERSION"
             
             # Build and restart with docker compose
-            docker compose down
-            docker compose build --no-cache
-            docker compose up -d
+            docker compose -f docker-compose.prod.yaml down
+            docker compose -f docker-compose.prod.yaml build --no-cache
+            docker compose -f docker-compose.prod.yaml up -d
             
             # Optional: Clean up old images to save space
             docker image prune -f 
