--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.5.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "@turf/turf": "^7.2.0",
     "dotenv": "^16.5.0",
@@ -20,7 +22,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3",
-    "three": "^0.175.0"
+    "three": "^0.175.0",
+    "three-stdlib": "^2.35.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
