--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "@turf/turf": "^7.2.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "mapbox-gl": "^3.11.0",
     "postprocessing": "^6.37.2",
