Added star background

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@h0rn0chse/night-sky": "^2.0.0",
     "cannon-es": "^0.20.0",
     "nanoid": "^5.1.5",
     "three": "^0.175.0"
