--- a/backend/api/Cargo.toml
+++ b/backend/api/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 migration = { path = "../migration" }
-axum = { version = "0.8", features = ["ws", "macros"] }
+axum = { version = "0.8", features = ["ws", "macros", "http2"] }
 tokio = { version = "1", features = ["full"] }
 sea-orm = { version = "1.1.8", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
 tower = "0.5.2"
@@ -28,3 +28,5 @@ utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
 chrono = { version = "0.4.40", features = ["serde"] }
 auth = { path = "../auth" }
 async-trait = "0.1.88"
+http-body-util = "0.1.3"
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
