--- a/backend/auth/Cargo.toml
+++ b/backend/auth/Cargo.toml
@@ -17,3 +17,4 @@ utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "decimal_floa
 axum = "0.8.3"
 async-trait = "0.1.88"
 http = "1.3.1"
+axum-extra = { version = "0.10.1", features = ["typed-header"] }
