--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
             echo "Deploying version: $VERSION"
 
             # Build and restart with docker compose
-            docker compose -f docker-compose.yaml -f docker-compose.prod.yaml build --no-cache
+            docker compose -f docker-compose.yaml -f docker-compose.prod.yaml build
             docker compose -f docker-compose.yaml -f docker-compose.prod.yaml down
             docker compose -f docker-compose.yaml -f docker-compose.prod.yaml up -d
 
